@@ -127,6 +127,44 @@ BICAPI  void  create_volume_slice(
     int             *n_pixels_alloced,
     pixels_struct   *pixels );
 
+BICAPI void  create_volume_slice_coding(
+    VIO_Volume       volume1,
+    VIO_Filter_types filter_type1,
+    VIO_Real         filter_width1,
+    VIO_Real         slice_position1[],
+    VIO_Real         x_axis1[],
+    VIO_Real         y_axis1[],
+    VIO_Real         x_translation1,
+    VIO_Real         y_translation1,
+    VIO_Real         x_scale1,
+    VIO_Real         y_scale1,
+    VIO_Volume       volume2,
+    VIO_Filter_types filter_type2,
+    VIO_Real         filter_width2,
+    VIO_Real         slice_position2[],
+    VIO_Real         x_axis2[],
+    VIO_Real         y_axis2[],
+    VIO_Real         x_translation2,
+    VIO_Real         y_translation2,
+    VIO_Real         x_scale2,
+    VIO_Real        y_scale2,
+    int             x_viewport_size,
+    int             y_viewport_size,
+    int             x_pixel_start,
+    int             x_pixel_end,
+    int             y_pixel_start,
+    int             y_pixel_end,
+    Pixel_types     pixel_type,
+    int             degrees_continuity,
+    unsigned short  **cmode_colour_map,
+    VIO_Colour      **rgb_colour_map,
+    VIO_Colour      empty_colour,
+    colour_coding_struct *colour_coding,
+    void            *render_storage,
+    VIO_BOOL         clip_pixels_flag,
+    int             *n_pixels_alloced,
+    pixels_struct   *pixels );
+
 BICAPI  void  set_volume_slice_pixel_range(
     VIO_Volume          volume1,
     VIO_Filter_types    filter_type1,
@@ -225,24 +263,25 @@ BICAPI  VIO_BOOL  should_change_this_one(
     int             desired_label );
 
 BICAPI  void  interpolate_volume_to_slice(
-    VIO_Volume          volume1,
+    VIO_Volume      volume1,
     int             n_dims1,
-    VIO_Real            origin1[],
-    VIO_Real            x_axis1[],
-    VIO_Real            y_axis1[],
-    VIO_Volume          volume2,
+    VIO_Real        origin1[],
+    VIO_Real        x_axis1[],
+    VIO_Real        y_axis1[],
+    VIO_Volume      volume2,
     int             n_dims2,
-    VIO_Real            origin2[],
-    VIO_Real            x_axis2[],
-    VIO_Real            y_axis2[],
+    VIO_Real        origin2[],
+    VIO_Real        x_axis2[],
+    VIO_Real        y_axis2[],
     int             x_pixel_start,
     int             x_pixel_end,
     int             y_pixel_start,
     int             y_pixel_end,
     int             degrees_continuity,
     unsigned short  **cmode_colour_map,
-    VIO_Colour          **rgb_colour_map,
-    VIO_Colour          empty_colour,
+    VIO_Colour      **rgb_colour_map,
+    VIO_Colour      empty_colour,
+    colour_coding_struct *colour_coding,
     pixels_struct   *pixels );
 
 BICAPI  VIO_Status  input_volume_header_only(
