@@ -14,10 +14,6 @@
 
 #include  "bicpl_internal.h"
 
-#ifndef lint
-static char rcsid[] = "$Header: /static-cvsroot/libraries/bicpl/Volumes/create_slice.c,v 1.47 2005-08-17 22:26:19 bert Exp $";
-#endif
-
 static void  create_pixel_mapping(
     VIO_Volume          volume1,
     int             n_slices1,
@@ -159,6 +155,7 @@ static void  set_pixel_range(
               cmode_colour_map
               rgb_colour_map
               empty_colour
+              colour_coding
               n_pixels_alloced
 @OUTPUT     : pixels
 @RETURNS    : 
@@ -171,26 +168,27 @@ static void  set_pixel_range(
 ---------------------------------------------------------------------------- */
 
 static void  create_weighted_volume_slices(
-    VIO_Volume          volume1,
+    VIO_Volume      volume1,
     int             n_slices1,
-    VIO_Real            **origins1,
-    VIO_Real            x_axis1[],
-    VIO_Real            y_axis1[],
-    VIO_Real            weights1[],
-    VIO_Volume          volume2,
+    VIO_Real        **origins1,
+    VIO_Real        x_axis1[],
+    VIO_Real        y_axis1[],
+    VIO_Real        weights1[],
+    VIO_Volume      volume2,
     int             n_slices2,
-    VIO_Real            **origins2,
-    VIO_Real            x_axis2[],
-    VIO_Real            y_axis2[],
-    VIO_Real            weights2[],
+    VIO_Real        **origins2,
+    VIO_Real        x_axis2[],
+    VIO_Real        y_axis2[],
+    VIO_Real        weights2[],
     int             x_pixel_start,
     int             x_pixel_end,
     int             y_pixel_start,
     int             y_pixel_end,
     int             degrees_continuity,
     unsigned short  **cmode_colour_map,
-    VIO_Colour          **rgb_colour_map,
-    VIO_Colour          empty_colour,
+    VIO_Colour      **rgb_colour_map,
+    VIO_Colour      empty_colour,
+    colour_coding_struct *colour_coding,
     void            *render_storage,
     pixels_struct   *pixels )
 {
@@ -271,7 +269,8 @@ static void  create_weighted_volume_slices(
                 y_pixel_end = pixels->y_size-1;
         }
 
-        if( volume1->is_cached_volume ||
+        if( (rgb_colour_map == NULL && colour_coding != NULL) ||
+            volume1->is_cached_volume ||
             (volume2 != NULL && volume2->is_cached_volume) ||
             (degrees_continuity != -1 && n_slices1 == 1 &&
             (volume_data2 == NULL || n_slices2 == 1)) )
@@ -286,7 +285,7 @@ static void  create_weighted_volume_slices(
                                          y_pixel_start, y_pixel_end,
                                          degrees_continuity,
                                          cmode_colour_map, rgb_colour_map,
-                                         empty_colour, pixels );
+                                         empty_colour, colour_coding, pixels );
         }
         else
         {
@@ -452,11 +451,120 @@ BICAPI void  create_volume_slice(
     int             *n_pixels_alloced,
     pixels_struct   *pixels )
 {
+  create_volume_slice_coding(volume1, filter_type1, filter_width1,
+                             slice_position1, x_axis1, y_axis1,
+                             x_translation1, y_translation1,
+                             x_scale1, y_scale1,
+                             volume2, filter_type2, filter_width2,
+                             slice_position2, x_axis2, y_axis2,
+                             x_translation2, y_translation2,
+                             x_scale2, y_scale2,
+                             x_viewport_size, y_viewport_size,
+                             x_pixel_start, x_pixel_end,
+                             y_pixel_start, y_pixel_end,
+                             pixel_type,
+                             degrees_continuity,
+                             cmode_colour_map,
+                             rgb_colour_map,
+                             empty_colour,
+                             NULL,
+                             render_storage,
+                             clip_pixels_flag,
+                             n_pixels_alloced,
+                             pixels );
+}
+
+/* ----------------------------- MNI Header -----------------------------------
+@NAME       : create_volume_slice_coding
+@INPUT      : volume1          - the volume to create a slice for
+              filter_type1     - filter_type, usually NEAREST_NEIGHBOUR
+              filter_width1    - width of filter, used for BOX, TRIANGLE, GAUSS
+              slice_position1  - the voxel coordinate of the slice
+              x_axis1          - the x axis in voxels
+              y_axis1          - the y axis in voxels
+              x_translation1   - pixel translation for viewing
+              y_translation1   - pixel translation for viewing
+              x_scale1         - pixel zoom for viewing
+              y_scale1         - pixel zoom for viewing
+              volume2          - second volume to be merged with first, or null
+              filter_type2     - filter_type, usually NEAREST_NEIGHBOUR
+              filter_width2    - width of filter, used for BOX, TRIANGLE, GAUSS
+              slice_position2  - the voxel coordinate of the slice
+              x_axis2          - the x axis in voxels
+              y_axis2          - the y axis in voxels
+              x_translation2   - pixel translation for viewing
+              y_translation2   - pixel translation for viewing
+              x_scale2         - pixel zoom for viewing
+              y_scale2         - pixel zoom for viewing
+              x_axis_index     - VIO_X,VIO_Y, or VIO_Z
+              y_axis_index     - VIO_X,VIO_Y, or VIO_Z
+              axis_index       - VIO_X,VIO_Y, or VIO_Z
+              x_viewport_size  - will be clipped to this size
+              y_viewport_size  - will be clipped to this size
+              pixel_type       - RGB_PIXEL or COLOUR_INDEX_PIXEL for rgb/cmap
+              interpolation_flag - ignored for now
+              cmode_colour_map - if pixel_type == COLOUR_INDEX_PIXEL, then
+                          2d array of 16 bit colour indices for merged slices,
+                          or pointer to 1d array of colour indices for volume1
+              rgb_colour_map - if pixel_type == RGB_PIXEL, then
+                          2d array of 24 bit colours for merged slices,
+                          or pointer to 1d array of colours for volume1
+@OUTPUT     : n_pixels_alloced - a pointer to the size alloced.  Before first
+                          call, set size alloced to zero, and all calls,
+                          pass pointer to size alloced, and pointer to pixels.
+              pixels           - 2d pixels array created, and realloced as
+                                 necessary, assuming, n_pixels_alloced is a
+                                 pointer to the current alloc size of pixels.
+@RETURNS    : 
+@DESCRIPTION: Creates a slice of one volume or merged slice of two, suitable
+              for graphics display.
+@CREATED    : Mar   1993           David MacDonald
+@MODIFIED   : 
+---------------------------------------------------------------------------- */
+
+BICAPI void  create_volume_slice_coding(
+    VIO_Volume       volume1,
+    VIO_Filter_types filter_type1,
+    VIO_Real         filter_width1,
+    VIO_Real         slice_position1[],
+    VIO_Real         x_axis1[],
+    VIO_Real         y_axis1[],
+    VIO_Real         x_translation1,
+    VIO_Real         y_translation1,
+    VIO_Real         x_scale1,
+    VIO_Real         y_scale1,
+    VIO_Volume       volume2,
+    VIO_Filter_types filter_type2,
+    VIO_Real         filter_width2,
+    VIO_Real         slice_position2[],
+    VIO_Real         x_axis2[],
+    VIO_Real         y_axis2[],
+    VIO_Real         x_translation2,
+    VIO_Real         y_translation2,
+    VIO_Real         x_scale2,
+    VIO_Real        y_scale2,
+    int             x_viewport_size,
+    int             y_viewport_size,
+    int             x_pixel_start,
+    int             x_pixel_end,
+    int             y_pixel_start,
+    int             y_pixel_end,
+    Pixel_types     pixel_type,
+    int             degrees_continuity,
+    unsigned short  **cmode_colour_map,
+    VIO_Colour      **rgb_colour_map,
+    VIO_Colour      empty_colour,
+    colour_coding_struct *colour_coding,
+    void            *render_storage,
+    VIO_BOOL         clip_pixels_flag,
+    int             *n_pixels_alloced,
+    pixels_struct   *pixels )
+{
     int          n_slices1, n_slices2;
-    VIO_Real         **positions1, **positions2, *weights1, *weights2;
-    VIO_Real         **real_origins1, **real_origins2;
-    VIO_Real         real_x_axis1[VIO_MAX_DIMENSIONS], real_y_axis1[VIO_MAX_DIMENSIONS];
-    VIO_Real         real_x_axis2[VIO_MAX_DIMENSIONS], real_y_axis2[VIO_MAX_DIMENSIONS];
+    VIO_Real     **positions1, **positions2, *weights1, *weights2;
+    VIO_Real     **real_origins1, **real_origins2;
+    VIO_Real     real_x_axis1[VIO_MAX_DIMENSIONS], real_y_axis1[VIO_MAX_DIMENSIONS];
+    VIO_Real     real_x_axis2[VIO_MAX_DIMENSIONS], real_y_axis2[VIO_MAX_DIMENSIONS];
 
     real_origins1 = NULL;       /* Initialize this!! */
     real_origins2 = NULL;       /* Initialize this!! */
@@ -507,8 +615,8 @@ BICAPI void  create_volume_slice(
                                    y_pixel_start, y_pixel_end,
                                    degrees_continuity,
                                    cmode_colour_map, rgb_colour_map,
-                                   empty_colour, render_storage,
-                                   pixels );
+                                   empty_colour, colour_coding,
+                                   render_storage, pixels );
 
     if( volume2 != NULL )
     {
